BaSP-W0X-2023:Add aside for mobile, minor fixes on tablet

--- a/Week-04/css/aside.css
+++ b/Week-04/css/aside.css
@@ -1,22 +1,118 @@
 aside {
     display: none;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    background-color: #EBECF0;
+    width: 100%;
+    height: 100%;
 }
-
+nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.other-options {
+    display: none;
+}
+.side-buttons li:last-child a {
+    display: none;
+}
+.hamburguer-aside img{
+    width: 3rem;
+    margin-bottom: 1rem;
+}
+.hamburguer-aside  {
+    display: flex;
+    align-self: baseline;
+}
+.side-buttons {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+.side-buttons li{
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem 0;
+}
+.side-buttons li a {
+    text-decoration: none;
+    color: #373867;
+    background: #EBECF0;
+    border: 1px solid #a4a4a5;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 700;
+    text-align: center;
+    line-height: 1.5rem;
+    padding: 20px 10px;
+}
+.side-buttons li:last-child a {
+    display: none;
+}
+.external-info {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+}
+.external-info li a{
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+.external-info img{
+    width: 1rem;
+    margin-right: 15px;
+}
+.external-info li {
+    margin-bottom: 0.5rem;
+}
+#main-logo img {
+    display: none;
+}
+#home {
+    background-color: #373867;
+    color: #EBECF0;
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+.footer-aside {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer-aside h2{
+    color: #34646F;
+}
+.footer-aside a img {
+    width: 3rem;
+    height: 50px;
+    border: 1px solid #AACE9B;
+}
+.footer-aside .social-media a img {
+    border: none;
+    margin-top: 30px;
+    width: 2rem;
+    height: 2rem;
+}
 @media (min-width: 480px) {
     aside {
         display: flex;
-        flex-direction: column;
         justify-content: top;
         align-items: center;
         text-align: center;
-        position: fixed;
-        height: 100%;
         background: #AACE9B;
         width: 20%;
         font-weight: 600;
         font-size: 14px;
     }
+    nav {
+        margin-bottom: 0rem;
+    }
     #main-logo {
+        display: inline;
         width: 50%;
         height: 50%;
     }
@@ -30,65 +126,60 @@ aside {
         font-weight: 700;
         font-size: 0.8rem;
     }
-    nav {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 3rem;
+    .side-buttons li a {
+        padding: 0.15rem;
+    }
+    .other-options {
+        display: inline;
+    }
+    .hamburguer-aside{
+        display: none;
+    }
+    .side-buttons li:last-child a {
+        display: inline;
+    }
+    #main-logo img {
+        display: inline;
     }
     .side-buttons {
         display: flex;
         flex-direction: column;
         width: 80%;
     }
-    .side-buttons li{
-        display: flex;
-        flex-direction: column;
-        margin: 0.5rem 0;
-    }
-    .side-buttons li a {
-        text-decoration: none;
-        color: #373867;
-        background: #EBECF0;
-        border: 1px solid #373867;
-        border-radius: 5px;
-        text-transform: uppercase;
-        font-size: 0.8rem;
-        text-align: center;
-        line-height: 1.5rem;
-    }
-    #home {
-        background-color: #373867;
-        color: #EBECF0;
-        font-size: 0.9rem;
-    }
-    .internal-info li{
+    .internal-info li {
         text-transform: uppercase;
         text-align: left;
         font-weight: 600;
-        font-size: 0.5rem;
+        font-size: 1.3vw;
         line-height: 1rem;
         padding: 1 0.5rem;
+        margin-left: 0.5rem;
     }
     .internal-info li a{
         text-decoration: none;
-    }
-    .external-info {
-        display: flex;
-        flex-direction: column;
-        margin-top: 2rem;
+        margin-right: 0.5vw;
     }
     .external-info a {
         text-decoration: none;
     }
     .external-info li{
         display: flex;
-        font-size: 0.5rem;
         font-weight: 600;
         line-height: 1.5rem;
+        width: 100%;
+    }
+    .external-info li a{
+        text-decoration: none;
+        font-size: 1.5vw;
     }
     .side-icon img{
         width: 1rem;
         margin-right: .8rem;
+    }
+    .footer-aside {
+        display: none;
+    }
+    .external-info {
+        display: inline;
     }
 }
