--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -90,7 +90,7 @@ main h2 {
     font-size: 14px;
     line-height: 16px;
     padding: 0  5% 5% 5%;
-    margin: 22% 0;
+    margin: 35% 0;
 }
 #contact label {
     display: flex;
@@ -111,6 +111,9 @@ main h2 {
     border-radius: 20px;
     padding: 0 20px;
     width: 40%;
+}
+#textarea-contact{
+    max-height: 100px;
 }
 #contact h3 {
     margin: 5rem 0;
@@ -150,13 +153,18 @@ main h2 {
     background-image: url("../img/gym3.png");
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     padding: 35vw 10vw;
+}
+.blur {
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(8px);
 }
 #activities {
     display: flex;
     flex-direction: column;
 }
-#act {
+#act ul{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -221,5 +229,14 @@ main h2 {
 @media (min-width: 480px) {
     main {
         margin-left: 20vw;
+    }
+    #act ul {
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 12rem;
+        align-items: baseline;
+    }
+    #act img {
+        width: 3rem;
     }
 }
