--- a/Week-04/css/style.css
+++ b/Week-04/css/style.css
@@ -2,7 +2,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #373867;
 }
-h2{
+h2, h1{
     text-transform: uppercase;
 }
 @media (min-width: 480px) {
